# swikly-sdk-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: create_request.py
src/swikly/: __init__.py  client.py  errors.py  models.py  utils.py  webhooks.py
src/swikly/resources/: accounts.py  advanced.py  base.py  requests.py  users.py
tests/: test_webhooks.py
