[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "swikly-sdk-python"
version = "0.1.0"
description = "Unofficial Python SDK for Swikly API v2"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "CODELOUNGE (SMC-PRIVATE) LIMITED", email = "arshad@codelounge.io"}]
keywords = ["swikly", "payments", "deposits", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-python-dateutil",
]

[project.urls]
Homepage = "https://github.com/codelounge-io/swikly-sdk-python"
Issues = "https://github.com/codelounge-io/swikly-sdk-python/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.hatch.build.targets.wheel]
packages = ["src/swikly"]